--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/src/assets/img/Hero Carousel/HDHero.png" class="d-block w-100" alt="HD Logo" title="HD MEC Logo">
+      <img src="../HDTest/src/assets/img/Hero Carousel/HDHero.png" class="d-block w-100" alt="HD Logo" title="HD MEC Logo">
     </div>
     <div class="carousel-item">
       <img src="../src/assets/img/Hero Carousel/bocina.png" class="d-block w-100" alt="Bocina" title="bocina">
