--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
       <img src="../src/assets/img/Hero Carousel/bocina.png" class="d-block w-100" alt="Bocina" title="bocina">
     </div>
     <div class="carousel-item">
-      <img src="/src/assets/img/Hero Carousel/hielera.png" class="d-block w-100" alt="hielera" title="hielera">
+      <img src="../HDTest/src/assets/img/Hero Carousel/hielera.png" class="d-block w-100" alt="hielera" title="hielera">
     </div>
     <div class="carousel-item">
-      <img src="/src/assets/img/Hero Carousel/libreta.png" class="d-block w-100" alt="libreta" title="libreta">
+      <img src="../HDTest/src/assets/img/Hero Carousel/libreta.png" class="d-block w-100" alt="libreta" title="libreta">
     </div>
     <div class="carousel-item">
-      <img src="/src/assets/img/Hero Carousel/mochila.png" class="d-block w-100" alt="mochila" title="mochila">
+      <img src="../HDTest/src/assets/img/Hero Carousel/mochila.png" class="d-block w-100" alt="mochila" title="mochila">
     </div>
     <div class="carousel-item">
-      <img src="/src/assets/img/Hero Carousel/Taza.png" class="d-block w-100" alt="taza" title="taza">
+      <img src="../HDTest/src/assets/img/Hero Carousel/Taza.png" class="d-block w-100" alt="taza" title="taza">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="prev">
@@ -79,7 +79,7 @@
     <div class="card mb-3 border-hd-orange-600" style="max-width: 640px;">
       <div class="row g-0">
         <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-          <img src="/src/assets/img/imagenesCategorias/bebidas.png" class="img-fluid rounded-start p-3" alt="...">
+          <img src="../HDTest/src/assets/img/imagenesCategorias/bebidas.png" class="img-fluid rounded-start p-3" alt="...">
           <div class="d-grid gap-2 d-md-block">
             <button class="btn btn-hd-orange-500 text-hd-white-500" type="button">Bibidas</button>
           </div>
@@ -98,7 +98,7 @@
     <div class="card mb-3 border-hd-orange-600" style="max-width: 640px;">
       <div class="row g-0">
         <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-          <img src="/src/assets/img/imagenesCategorias/oficina.png" class="img-fluid rounded-start p-3" alt="...">
+          <img src="../HDTest/src/assets/img/imagenesCategorias/oficina.png" class="img-fluid rounded-start p-3" alt="...">
           <div class="d-grid gap-2 d-md-block">
             <button class="btn btn-hd-orange-500 text-hd-white-500" type="button">Oficina</button>
           </div>
@@ -117,7 +117,7 @@
     <div class="card mb-3 border-hd-orange-600" style="max-width: 640px;">
       <div class="row g-0">
         <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-          <img src="/src/assets/img/imagenesCategorias/Tecnologia.png" class="img-fluid rounded-start p-3" alt="...">
+          <img src="../HDTest/src/assets/img/imagenesCategorias/Tecnologia.png" class="img-fluid rounded-start p-3" alt="...">
           <div class="d-grid gap-2 d-md-block">
             <button class="btn btn-hd-orange-500 text-hd-white-500" type="button">Tecnología</button>
           </div>
@@ -136,7 +136,7 @@
     <div class="card mb-3 border-hd-orange-600" style="max-width: 640px;">
       <div class="row g-0">
         <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-          <img src="/src/assets/img/imagenesCategorias/textiles.png" class="img-fluid rounded-start p-3" alt="...">
+          <img src="../HDTest/src/assets/img/imagenesCategorias/textiles.png" class="img-fluid rounded-start p-3" alt="...">
           <div class="d-grid gap-2 d-md-block">
             <button class="btn btn-hd-orange-500 text-hd-white-500" type="button">Textiles</button>
           </div>
@@ -155,7 +155,7 @@
     <div class="card mb-3 border-hd-orange-600" style="max-width: 640px;">
       <div class="row g-0">
         <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-          <img src="/src/assets/img/imagenesCategorias/varios.png" class="img-fluid rounded-start p-3" alt="...">
+          <img src="../HDTest/src/assets/img/imagenesCategorias/varios.png" class="img-fluid rounded-start p-3" alt="...">
           <div class="d-grid gap-2 d-md-block">
             <button class="btn btn-hd-orange-500 text-hd-white-500" type="button">Varios</button>
           </div>
