update images cards

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <img src="../HDTest/src/assets/img/Hero Carousel/HDHero.png" class="d-block w-100" alt="HD Logo" title="HD MEC Logo">
     </div>
     <div class="carousel-item">
-      <img src="../src/assets/img/Hero Carousel/bocina.png" class="d-block w-100" alt="Bocina" title="bocina">
+      <img src="../HDTest/src/assets/img/Hero Carousel/bocina.png" class="d-block w-100" alt="Bocina" title="bocina">
     </div>
     <div class="carousel-item">
       <img src="../HDTest/src/assets/img/Hero Carousel/hielera.png" class="d-block w-100" alt="hielera" title="hielera">
