bebidas, oficina, secciones completas

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <a class="nav-link active text-hd-orange-500" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-hd-orange-500" href="/src/pages/bebidas.html">Bebidas</a>
+                <a class="nav-link text-hd-orange-500" href="src/pages/bebidas.html">Bebidas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-hd-orange-500" href="/src/pages/oficina.html">Oficina</a>
+                <a class="nav-link text-hd-orange-500" href="src/pages/oficina.html">Oficina</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-hd-orange-500" href="#">Tecnologia</a>
@@ -52,22 +52,22 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/src/assets/img/hero-carousel/HDHero.png" class="d-block w-100" alt="HD Logo" title="HD MEC Logo">
+      <img src="src/assets/img/hero-carousel/HDHero.png" class="d-block w-100" alt="HD Logo" title="HD MEC Logo">
     </div>
     <div class="carousel-item">
-      <img src="/src/assets/img/hero-carousel/bocina.png" class="d-block w-100" alt="Bocina" title="bocina">
+      <img src="src/assets/img/hero-carousel/bocina.png" class="d-block w-100" alt="Bocina" title="bocina">
     </div>
     <div class="carousel-item">
-      <img src="/src/assets/img/hero-carousel/hielera.png" class="d-block w-100" alt="Hielera" title="hielera">
+      <img src="src/assets/img/hero-carousel/hielera.png" class="d-block w-100" alt="Hielera" title="hielera">
     </div>
     <div class="carousel-item">
-      <img src="/src/assets/img/hero-carousel/libreta.png" class="d-block w-100" alt="Libreta" title="libreta">
+      <img src="src/assets/img/hero-carousel/libreta.png" class="d-block w-100" alt="Libreta" title="libreta">
     </div>
     <div class="carousel-item">
-      <img src="/src/assets/img/hero-carousel/mochila.png" class="d-block w-100" alt="Mochila" title="mochila">
+      <img src="src/assets/img/hero-carousel/mochila.png" class="d-block w-100" alt="Mochila" title="mochila">
     </div>
     <div class="carousel-item">
-      <img src="/src/assets/img/hero-carousel/Taza.png" class="d-block w-100" alt="Taza" title="taza">
+      <img src="src/assets/img/hero-carousel/Taza.png" class="d-block w-100" alt="Taza" title="taza">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="prev">
@@ -87,9 +87,9 @@
     <div class="card mb-3 border-hd-orange-600" style="max-width: 640px;">
       <div class="row g-0">
         <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-          <img src="/src/assets/img/imagenesCategorias/bebidas.png" class="img-fluid rounded-start p-3" alt="Bebidas">
+          <img src="src/assets/img/imagenesCategorias/bebidas.png" class="img-fluid rounded-start p-3" alt="Bebidas">
           <div class="d-grid gap-2 d-md-block">
-            <button class="btn btn-hd-orange-500 text-hd-white-500" type="button"><a href="/src/pages/bebidas.html" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Bebidas</a></button>
+            <button class="btn btn-hd-orange-500 text-hd-white-500" type="button"><a href="src/pages/bebidas.html" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Bebidas</a></button>
           </div>
         </div>
         <div class="col-md-8">
@@ -106,9 +106,9 @@
     <div class="card mb-3 border-hd-orange-600" style="max-width: 640px;">
       <div class="row g-0">
         <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-          <img src="/src/assets/img/imagenesCategorias/oficina.png" class="img-fluid rounded-start p-3" alt="Oficina">
+          <img src="src/assets/img/imagenesCategorias/oficina.png" class="img-fluid rounded-start p-3" alt="Oficina">
           <div class="d-grid gap-2 d-md-block">
-            <button class="btn btn-hd-orange-500 text-hd-white-500" type="button"><a href="/src/pages/oficina.html" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Oficina</a></button>
+            <button class="btn btn-hd-orange-500 text-hd-white-500" type="button"><a href="src/pages/oficina.html" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Oficina</a></button>
           </div>
         </div>
         <div class="col-md-8">
@@ -125,7 +125,7 @@
     <div class="card mb-3 border-hd-orange-600" style="max-width: 640px;">
       <div class="row g-0">
         <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-          <img src="/src/assets/img/imagenesCategorias/Tecnologia.png" class="img-fluid rounded-start p-3" alt="...">
+          <img src="src/assets/img/imagenesCategorias/Tecnologia.png" class="img-fluid rounded-start p-3" alt="...">
           <div class="d-grid gap-2 d-md-block">
             <button class="btn btn-hd-orange-500 text-hd-white-500" type="button">Tecnología</button>
           </div>
@@ -144,7 +144,7 @@
     <div class="card mb-3 border-hd-orange-600" style="max-width: 640px;">
       <div class="row g-0">
         <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-          <img src="/src/assets/img/imagenesCategorias/textiles.png" class="img-fluid rounded-start p-3" alt="...">
+          <img src="src/assets/img/imagenesCategorias/textiles.png" class="img-fluid rounded-start p-3" alt="...">
           <div class="d-grid gap-2 d-md-block">
             <button class="btn btn-hd-orange-500 text-hd-white-500" type="button">Textiles</button>
           </div>
@@ -163,7 +163,7 @@
     <div class="card mb-3 border-hd-orange-600" style="max-width: 640px;">
       <div class="row g-0">
         <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-          <img src="/src/assets/img/imagenesCategorias/varios.png" class="img-fluid rounded-start p-3" alt="...">
+          <img src="src/assets/img/imagenesCategorias/varios.png" class="img-fluid rounded-start p-3" alt="...">
           <div class="d-grid gap-2 d-md-block">
             <button class="btn btn-hd-orange-500 text-hd-white-500" type="button">Varios</button>
           </div>
