--- a/src/pages/bebidas.html
+++ b/src/pages/bebidas.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/build/css/hdmecbs.css" />
+    <link rel="stylesheet" href="../../build/css/hdmecbs.css" />
     <title>Bebidas</title>
 </head>
 
@@ -12,19 +12,19 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-white-500">
         <div class="container-fluid">
-            <a class="navbar-brand text-hd-orange-500" href="/index.html">
-                <img src="/src/assets/img/hero-carousel/logo-hd.png" alt="logo" />
+            <a class="navbar-brand text-hd-orange-500" href="../../index.html">
+                <img src="../../src/assets/img/hero-carousel/logo-hd.png" alt="logo" />
             </a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link active text-hd-orange-500" aria-current="page" href="#">Home</a>
+                      <a class="nav-link active text-hd-orange-500" aria-current="page" href="../../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-hd-orange-500" href="/src/pages/bebidas.html">Bebidas</a>
+                      <a class="nav-link text-hd-orange-500" href="../../src/pages/bebidas.html">Bebidas</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-hd-orange-500" href="/src/pages/oficina.html">Oficina</a>
+                      <a class="nav-link text-hd-orange-500" href="../../src/pages/oficina.html">Oficina</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link text-hd-orange-500" href="#">Tecnologia</a>
@@ -59,26 +59,26 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/src/assets/img/hero-carousel/HDHero.png" class="d-block w-100" alt="HD Logo"
+                <img src="../../src/assets/img/hero-carousel/HDHero.png" class="d-block w-100" alt="HD Logo"
                     title="HD MEC Logo" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/bocina.png" class="d-block w-100" alt="Bocina" title="bocina" />
+                <img src="../../src/assets/img/hero-carousel/bocina.png" class="d-block w-100" alt="Bocina" title="bocina" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/hielera.png" class="d-block w-100" alt="hielera"
+                <img src="../../src/assets/img/hero-carousel/hielera.png" class="d-block w-100" alt="hielera"
                     title="hielera" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/libreta.png" class="d-block w-100" alt="libreta"
+                <img src="../../src/assets/img/hero-carousel/libreta.png" class="d-block w-100" alt="libreta"
                     title="libreta" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/mochila.png" class="d-block w-100" alt="mochila"
+                <img src="../../src/assets/img/hero-carousel/mochila.png" class="d-block w-100" alt="mochila"
                     title="mochila" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/Taza.png" class="d-block w-100" alt="taza" title="taza" />
+                <img src="../../src/assets/img/hero-carousel/Taza.png" class="d-block w-100" alt="taza" title="taza" />
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="prev">
@@ -98,11 +98,11 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/bebidas/pachones/pachon-1.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/bebidas/pachones/pachon-1.png" class="img-fluid rounded-start p-3"
                             alt="bebidas" />
                         <div class="d-grid gap-2 d-md-block m-2">
                             <button class="btn btn-hd-orange-500 text-hd-white-500" type="button">
-                              <a href="/src/pages/pachones.html" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Pachones</a>
+                              <a href="../../src/pages/pachones.html" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Pachones</a>
                             </button>
                         </div>
                     </div>
@@ -119,11 +119,11 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/bebidas/tazas/taza-3.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/bebidas/tazas/taza-3.png" class="img-fluid rounded-start p-3"
                             alt="bebidas" />
                         <div class="d-grid gap-2 d-md-block m-2">
                             <button class="btn btn-hd-orange-500 text-hd-white-500" type="button">
-                                <a href="/src/pages/tazas.html" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Tazas</a>
+                                <a href="../../src/pages/tazas.html" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Tazas</a>
                             </button>
                         </div>
                     </div>
@@ -145,11 +145,11 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/bebidas/tumbler/tumbler-1.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/bebidas/tumbler/tumbler-1.png" class="img-fluid rounded-start p-3"
                             alt="bebidas" />
                         <div class="d-grid gap-2 d-md-block m-2">
                             <button class="btn btn-hd-orange-500 text-hd-white-500" type="button">
-                                <a href="/src/pages/tumblers.html" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Tumblers</a> 
+                                <a href="../../src/pages/tumblers.html" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Tumblers</a> 
                             </button>
                         </div>
                     </div>
