--- a/src/pages/escritorio.html
+++ b/src/pages/escritorio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/build/css/hdmecbs.css" />
+    <link rel="stylesheet" href="../../build/css/hdmecbs.css" />
     <title>Escritorio</title>
 </head>
 
@@ -12,19 +12,19 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-white-500">
         <div class="container-fluid">
-            <a class="navbar-brand text-hd-orange-500" href="/index.html">
-                <img src="/src/assets/img/hero-carousel/logo-hd.png" alt="Logo" />
+            <a class="navbar-brand text-hd-orange-500" href="../../index.html">
+                <img src="../../src/assets/img/hero-carousel/logo-hd.png" alt="Logo" />
             </a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link active text-hd-orange-500" aria-current="page" href="/index.html">Home</a>
+                      <a class="nav-link active text-hd-orange-500" aria-current="page" href="../../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-hd-orange-500" href="/src/pages/bebidas.html">Bebidas</a>
+                      <a class="nav-link text-hd-orange-500" href="../../src/pages/bebidas.html">Bebidas</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-hd-orange-500" href="/src/pages/oficina.html">Oficina</a>
+                      <a class="nav-link text-hd-orange-500" href="../../src/pages/oficina.html">Oficina</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link text-hd-orange-500" href="#">Tecnologia</a>
@@ -59,26 +59,26 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/src/assets/img/hero-carousel/HDHero.png" class="d-block w-100" alt="HD Logo"
+                <img src="../../src/assets/img/hero-carousel/HDHero.png" class="d-block w-100" alt="HD Logo"
                     title="HD MEC Logo" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/bocina.png" class="d-block w-100" alt="Bocina" title="bocina" />
+                <img src="../../src/assets/img/hero-carousel/bocina.png" class="d-block w-100" alt="Bocina" title="bocina" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/hielera.png" class="d-block w-100" alt="Hielera"
+                <img src="../../src/assets/img/hero-carousel/hielera.png" class="d-block w-100" alt="Hielera"
                     title="hielera" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/libreta.png" class="d-block w-100" alt="Libreta"
+                <img src="../../src/assets/img/hero-carousel/libreta.png" class="d-block w-100" alt="Libreta"
                     title="libreta" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/mochila.png" class="d-block w-100" alt="Mochila"
+                <img src="../../src/assets/img/hero-carousel/mochila.png" class="d-block w-100" alt="Mochila"
                     title="mochila" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/Taza.png" class="d-block w-100" alt="Taza" title="taza" />
+                <img src="../../src/assets/img/hero-carousel/Taza.png" class="d-block w-100" alt="Taza" title="taza" />
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="prev">
@@ -98,14 +98,14 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/oficina/libretas y post it/mausepad-1.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/oficina/libretas y post it/mausepad-1.png" class="img-fluid rounded-start p-3"
                             alt="Mouse pad" />
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title text-hd-orange-500">Mouse Pad</h5>
                            <p class="card-text">Mousepad de neopreno con descansador en gel para muñeca. Medida del producto 23 x 20.3 cm Material Material Poliuretano.</p>
-                            <img src="/src/assets/img/oficina/libretas y post it/mausepad-1.png" class="img-description">
+                            <img src="../../src/assets/img/oficina/libretas y post it/mausepad-1.png" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -118,7 +118,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/oficina/libretas y post it/post-it-1.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/oficina/libretas y post it/post-it-1.png" class="img-fluid rounded-start p-3"
                             alt="Anser" />
                     </div>
                     <div class="col-md-8">
@@ -127,7 +127,7 @@
                             <p class="card-text">
                                 Incluye porta plumas, 500 notas de diferentes colores, 25 notas adheribles amarillas y 5 banderas adheribles de diferentes de colores. Medida del producto 8.6 x 8.6 cm  Material Cartón/Papel.
                             </p>
-                            <img src="/src/assets/img/oficina/libretas y post it/post-it-1.png" class="img-description">
+                            <img src="../../src/assets/img/oficina/libretas y post it/post-it-1.png" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -140,7 +140,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/oficina/libretas y post it/kit.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/oficina/libretas y post it/kit.png" class="img-fluid rounded-start p-3"
                             alt="Mini Kit" />
                     </div>
                     <div class="col-md-8">
@@ -149,7 +149,7 @@
                             <p class="card-text">
                                 Mini kit de escritorio con engrapadora, perforadora, despachador de cinta y quita grapas.Medida del producto 9.2 x 6 cm  Material Metal / Plástico.
                             </p>
-                            <img src="/src/assets/img/oficina/libretas y post it/kit.png" class="img-description">
+                            <img src="../../src/assets/img/oficina/libretas y post it/kit.png" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -162,7 +162,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/oficina/libretas y post it/cintas.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/oficina/libretas y post it/cintas.png" class="img-fluid rounded-start p-3"
                             alt="Portagafete" />
                     </div>
                     <div class="col-md-8">
@@ -172,7 +172,7 @@
                                 Cinta de colores que se cuelga al cuello y que sostiene tarjetas identificativas o bien gafetes  para diversos eventos Medida del producto longitud de la cinta de 90-95 cm.
  Ancho de la cinta de 15, 20 o 25 mm Material cinta para sublimar y/o Poliester.
                             </p>
-                            <img src="/src/assets/img/oficina/libretas y post it/cintas.png" alt="Portagafetes" class="img-description">
+                            <img src="../../src/assets/img/oficina/libretas y post it/cintas.png" alt="Portagafetes" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -185,7 +185,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/oficina/libretas y post it/resaltadores.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/oficina/libretas y post it/resaltadores.png" class="img-fluid rounded-start p-3"
                             alt="Resaltadores" />
                     </div>
                     <div class="col-md-8">
@@ -194,7 +194,7 @@
                             <p class="card-text">
                                 Set de 3 marcadores de cera larga duración. Medida del producto 10.5 x 5.3 x 1.8 cm Material Plástico y cera.
                             </p>
-                            <img src="/src/assets/img/oficina/libretas y post it/resaltadores.png" alt="Resaltadores" class="img-description">
+                            <img src="../../src/assets/img/oficina/libretas y post it/resaltadores.png" alt="Resaltadores" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -207,7 +207,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/oficina/libretas y post it/antiestres.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/oficina/libretas y post it/antiestres.png" class="img-fluid rounded-start p-3"
                             alt="Antiestres" />
                     </div>
                     <div class="col-md-8">
@@ -216,7 +216,7 @@
                             <p class="card-text">
                                 Pelota antiestrés Medida del producto 6 cm diámetro Material Poliuretano.
                             </p>
-                            <img src="/src/assets/img/oficina/libretas y post it/antiestres.png" alt="Antiestres" class="img-description">
+                            <img src="../../src/assets/img/oficina/libretas y post it/antiestres.png" alt="Antiestres" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -229,7 +229,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/oficina/libretas y post it/mausepad-2.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/oficina/libretas y post it/mausepad-2.png" class="img-fluid rounded-start p-3"
                             alt="Mouse pad Sublimado" />
                     </div>
                     <div class="col-md-8">
@@ -238,7 +238,7 @@
                             <p class="card-text">
                                 Mousepad de neopreno para sublimar de 5 mm. Medida del producto 20cm x 23.5cm x 0.5cm Material Poliuretano para sublimar.
                             </p>
-                            <img src="/src/assets/img/oficina/libretas y post it/mausepad-2.png" alt="Mouse Pad Sublimado" class="img-description">
+                            <img src="../../src/assets/img/oficina/libretas y post it/mausepad-2.png" alt="Mouse Pad Sublimado" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
