--- a/src/pages/lapiceros.html
+++ b/src/pages/lapiceros.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/build/css/hdmecbs.css" />
+    <link rel="stylesheet" href="../../build/css/hdmecbs.css" />
     <title>Lapiceros</title>
 </head>
 
@@ -12,19 +12,19 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-white-500">
         <div class="container-fluid">
-            <a class="navbar-brand text-hd-orange-500" href="/index.html">
-                <img src="/src/assets/img/hero-carousel/logo-hd.png" alt="logo" />
+            <a class="navbar-brand text-hd-orange-500" href="../../index.html">
+                <img src="../../src/assets/img/hero-carousel/logo-hd.png" alt="logo" />
             </a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link active text-hd-orange-500" aria-current="page" href="/index.html">Home</a>
+                      <a class="nav-link active text-hd-orange-500" aria-current="page" href="../../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-hd-orange-500" href="/src/pages/bebidas.html">Bebidas</a>
+                      <a class="nav-link text-hd-orange-500" href="../../src/pages/bebidas.html">Bebidas</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-hd-orange-500" href="/src/pages/oficina.html">Oficina</a>
+                      <a class="nav-link text-hd-orange-500" href="../../src/pages/oficina.html">Oficina</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link text-hd-orange-500" href="#">Tecnologia</a>
@@ -59,26 +59,26 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/src/assets/img/hero-carousel/HDHero.png" class="d-block w-100" alt="HD Logo"
+                <img src="../../src/assets/img/hero-carousel/HDHero.png" class="d-block w-100" alt="HD Logo"
                     title="HD MEC Logo" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/bocina.png" class="d-block w-100" alt="Bocina" title="bocina" />
+                <img src="../../src/assets/img/hero-carousel/bocina.png" class="d-block w-100" alt="Bocina" title="bocina" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/hielera.png" class="d-block w-100" alt="hielera"
+                <img src="../../src/assets/img/hero-carousel/hielera.png" class="d-block w-100" alt="hielera"
                     title="hielera" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/libreta.png" class="d-block w-100" alt="libreta"
+                <img src="../../src/assets/img/hero-carousel/libreta.png" class="d-block w-100" alt="libreta"
                     title="libreta" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/mochila.png" class="d-block w-100" alt="mochila"
+                <img src="../../src/assets/img/hero-carousel/mochila.png" class="d-block w-100" alt="mochila"
                     title="mochila" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/Taza.png" class="d-block w-100" alt="taza" title="taza" />
+                <img src="../../src/assets/img/hero-carousel/Taza.png" class="d-block w-100" alt="taza" title="taza" />
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="prev">
@@ -98,14 +98,14 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/oficina/lapiceros/lapiceros-5.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/oficina/lapiceros/lapiceros-5.png" class="img-fluid rounded-start p-3"
                             alt="Challenger" />
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title text-hd-orange-500">Challenger</h5>
                            <p class="card-text">Descripción Bolígrafo de plástico de acción de empuje. Medida del producto14 x 1 cm Material Plástico.</p>
-                            <img src="/src/assets/img/oficina/lapiceros/lapiceros-5.png" class="img-description">
+                            <img src="../../src/assets/img/oficina/lapiceros/lapiceros-5.png" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -118,7 +118,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/oficina/lapiceros/lapiceros-7.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/oficina/lapiceros/lapiceros-7.png" class="img-fluid rounded-start p-3"
                             alt="vermont" />
                     </div>
                     <div class="col-md-8">
@@ -127,7 +127,7 @@
                             <p class="card-text">
                                 Descripción Bolígrafo de plástico cuerpo traslúcido, grip de silicón, botón y punta cromada Medida del producto14 x 1.12 cm Material Plastico.
                             </p>
-                            <img src="/src/assets/img/oficina/lapiceros/lapiceros-7.png" class="img-description">
+                            <img src="../../src/assets/img/oficina/lapiceros/lapiceros-7.png" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -140,7 +140,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/oficina/lapiceros/lapiceros-1.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/oficina/lapiceros/lapiceros-1.png" class="img-fluid rounded-start p-3"
                             alt="amazon" />
                     </div>
                     <div class="col-md-8">
@@ -149,7 +149,7 @@
                             <p class="card-text">
                                 Descripción Bolígrafo de plástico con acabado soft touch   Medida del producto 14.5 x 1 cm Material Silicon soft touch.
                             </p>
-                            <img src="/src/assets/img/oficina/lapiceros/lapiceros-1.png" class="img-description">
+                            <img src="../../src/assets/img/oficina/lapiceros/lapiceros-1.png" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -162,7 +162,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/oficina/lapiceros/lapiceros-6.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/oficina/lapiceros/lapiceros-6.png" class="img-fluid rounded-start p-3"
                             alt="kibrit" />
                     </div>
                     <div class="col-md-8">
@@ -171,7 +171,7 @@
                             <p class="card-text">
                             Material eco-friendly a base de fibra de trigo. Clip con cubierta de carton. Medida del producto 1.1 x 14.2 cm Material, Fibra de Trigo/Plástico/Cartón.
                             </p>
-                            <img src="/src/assets/img/oficina/lapiceros/lapiceros-6.png" alt="parvo" class="img-description">
+                            <img src="../../src/assets/img/oficina/lapiceros/lapiceros-6.png" alt="parvo" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -184,7 +184,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/oficina/lapiceros/lapiceros-2.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/oficina/lapiceros/lapiceros-2.png" class="img-fluid rounded-start p-3"
                             alt="aros" />
                     </div>
                     <div class="col-md-8">
@@ -193,7 +193,7 @@
                             <p class="card-text">
                                 Terminado rubber. Medida del producto 1 x 13.5 cm Material Alumnio.
                             </p>
-                            <img src="/src/assets/img/oficina/lapiceros/lapiceros-2.png" alt="Aros" class="img-description">
+                            <img src="../../src/assets/img/oficina/lapiceros/lapiceros-2.png" alt="Aros" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -206,7 +206,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/oficina/lapiceros/lapiceros-4.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/oficina/lapiceros/lapiceros-4.png" class="img-fluid rounded-start p-3"
                             alt="chad" />
                     </div>
                     <div class="col-md-8">
@@ -215,7 +215,7 @@
                             <p class="card-text">
                                 Descripción Bolígrafo de plástico    Medida del producto 1.2 x 13.9 cm Material plástico.
                             </p>
-                            <img src="/src/assets/img/oficina/lapiceros/lapiceros-4.png" alt="chad" class="img-description">
+                            <img src="../../src/assets/img/oficina/lapiceros/lapiceros-4.png" alt="chad" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -228,7 +228,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/oficina/lapiceros/lapiceros-3.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/oficina/lapiceros/lapiceros-3.png" class="img-fluid rounded-start p-3"
                             alt="ashida" />
                     </div>
                     <div class="col-md-8">
@@ -237,7 +237,7 @@
                             <p class="card-text">
                             Boligrafo con touch screen, base para smartphone y limpiador de pantalla. Mecanismo twist. Medida del producto 1.2 x 15 cm, Material Plástico.
                             </p>
-                            <img src="/src/assets/img/oficina/lapiceros/lapiceros-3.png" alt="ashida" class="img-description">
+                            <img src="../../src/assets/img/oficina/lapiceros/lapiceros-3.png" alt="ashida" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
