--- a/src/pages/libretas.html
+++ b/src/pages/libretas.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/build/css/hdmecbs.css" />
+    <link rel="stylesheet" href="../../build/css/hdmecbs.css" />
     <title>Libretas y Post it</title>
 </head>
 
@@ -12,19 +12,19 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-white-500">
         <div class="container-fluid">
-            <a class="navbar-brand text-hd-orange-500" href="/index.html">
-                <img src="/src/assets/img/hero-carousel/logo-hd.png" alt="Logo" />
+            <a class="navbar-brand text-hd-orange-500" href="../../index.html">
+                <img src="src/assets/img/hero-carousel/logo-hd.png" alt="Logo" />
             </a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link active text-hd-orange-500" aria-current="page" href="/index.html">Home</a>
+                      <a class="nav-link active text-hd-orange-500" aria-current="page" href="../../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-hd-orange-500" href="/src/pages/bebidas.html">Bebidas</a>
+                      <a class="nav-link text-hd-orange-500" href="src/pages/bebidas.html">Bebidas</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-hd-orange-500" href="/src/pages/oficina.html">Oficina</a>
+                      <a class="nav-link text-hd-orange-500" href="src/pages/oficina.html">Oficina</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link text-hd-orange-500" href="#">Tecnologia</a>
@@ -59,26 +59,26 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/src/assets/img/hero-carousel/HDHero.png" class="d-block w-100" alt="HD Logo"
+                <img src="src/assets/img/hero-carousel/HDHero.png" class="d-block w-100" alt="HD Logo"
                     title="HD MEC Logo" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/bocina.png" class="d-block w-100" alt="Bocina" title="bocina" />
+                <img src="src/assets/img/hero-carousel/bocina.png" class="d-block w-100" alt="Bocina" title="bocina" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/hielera.png" class="d-block w-100" alt="Hielera"
+                <img src="src/assets/img/hero-carousel/hielera.png" class="d-block w-100" alt="Hielera"
                     title="hielera" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/libreta.png" class="d-block w-100" alt="Libreta"
+                <img src="src/assets/img/hero-carousel/libreta.png" class="d-block w-100" alt="Libreta"
                     title="libreta" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/mochila.png" class="d-block w-100" alt="Mochila"
+                <img src="src/assets/img/hero-carousel/mochila.png" class="d-block w-100" alt="Mochila"
                     title="mochila" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/Taza.png" class="d-block w-100" alt="Taza" title="taza" />
+                <img src="src/assets/img/hero-carousel/Taza.png" class="d-block w-100" alt="Taza" title="taza" />
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="prev">
@@ -98,14 +98,14 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/oficina/libretas y post it/libreta-4.png" class="img-fluid rounded-start p-3"
+                        <img src="src/assets/img/oficina/libretas y post it/libreta-4.png" class="img-fluid rounded-start p-3"
                             alt="Monza" />
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title text-hd-orange-500">Monza</h5>
                            <p class="card-text">Libreta con elástico para cierre, en acabado soft-touch. Medida del product 14 x 21.1 cm Material Soft Touch</p>
-                            <img src="/src/assets/img/oficina/libretas y post it/monza.jpg" class="img-description">
+                            <img src="src/assets/img/oficina/libretas y post it/monza.jpg" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -118,7 +118,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/oficina/libretas y post it/libreta-1.png" class="img-fluid rounded-start p-3"
+                        <img src="src/assets/img/oficina/libretas y post it/libreta-1.png" class="img-fluid rounded-start p-3"
                             alt="vermont" />
                     </div>
                     <div class="col-md-8">
@@ -127,7 +127,7 @@
                             <p class="card-text">
                                 Libreta y boligráfo ecológico bi color.  Medida del producto 17.5 x 13 cm Material Cartón.
                             </p>
-                            <img src="/src/assets/img/oficina/libretas y post it/asturias.jpg" class="img-description">
+                            <img src="src/assets/img/oficina/libretas y post it/asturias.jpg" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -140,7 +140,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/oficina/libretas y post it/libreta-3.png" class="img-fluid rounded-start p-3"
+                        <img src="src/assets/img/oficina/libretas y post it/libreta-3.png" class="img-fluid rounded-start p-3"
                             alt="Joliet" />
                     </div>
                     <div class="col-md-8">
@@ -149,7 +149,7 @@
                             <p class="card-text">
                                 Libreta con 100 hojas de raya. Incluye banderillas adheribles en 5 colores, bolígrafo ecológico y espiral metálico doble Medida del producto 16.3 x 22 cm Material Cartón.
                             </p>
-                            <img src="/src/assets/img/oficina/libretas y post it/libreta-3.png" class="img-description">
+                            <img src="src/assets/img/oficina/libretas y post it/libreta-3.png" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -162,7 +162,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/oficina/libretas y post it/libreta-2.png" class="img-fluid rounded-start p-3"
+                        <img src="src/assets/img/oficina/libretas y post it/libreta-2.png" class="img-fluid rounded-start p-3"
                             alt="Green Planet" />
                     </div>
                     <div class="col-md-8">
@@ -171,7 +171,7 @@
                             <p class="card-text">
                                 Libreta con 50 Hojas de raya. Incluye bolígrafo ecológico y elástico para cerrar. Medida del producto 7.7 x 12.7 cm Material Cartón / Papel Reciclado.
                             </p>
-                            <img src="/src/assets/img/oficina/libretas y post it/libreta-2.png" alt="Green Planet" class="img-description">
+                            <img src="src/assets/img/oficina/libretas y post it/libreta-2.png" alt="Green Planet" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -184,7 +184,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/oficina/libretas y post it/Post-it-4.png" class="img-fluid rounded-start p-3"
+                        <img src="src/assets/img/oficina/libretas y post it/Post-it-4.png" class="img-fluid rounded-start p-3"
                             alt="Sticky" />
                     </div>
                     <div class="col-md-8">
@@ -193,7 +193,7 @@
                             <p class="card-text">
                                 Porta notas ecológico con 5 banderines de colores y post it. Medida del product 10.8 x 8.5 x 2.5 cm Material Cartón.
                             </p>
-                            <img src="/src/assets/img/oficina/libretas y post it/Post-it-4.png" alt="Sticky" class="img-description">
+                            <img src="src/assets/img/oficina/libretas y post it/Post-it-4.png" alt="Sticky" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -206,7 +206,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/oficina/libretas y post it/post-it-3.png" class="img-fluid rounded-start p-3"
+                        <img src="src/assets/img/oficina/libretas y post it/post-it-3.png" class="img-fluid rounded-start p-3"
                             alt="Truskavet" />
                     </div>
                     <div class="col-md-8">
@@ -215,7 +215,7 @@
                             <p class="card-text">
                                 Contiene 5 tiras de banderillas adheribles de colores.Medida del producto 8.3 x 5.4 cm Material Cartón/Papel.
                             </p>
-                            <img src="/src/assets/img/oficina/libretas y post it/post-it-3.png" alt="Truskavet" class="img-description">
+                            <img src="src/assets/img/oficina/libretas y post it/post-it-3.png" alt="Truskavet" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -228,7 +228,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/oficina/libretas y post it/post-it-2.png" class="img-fluid rounded-start p-3"
+                        <img src="src/assets/img/oficina/libretas y post it/post-it-2.png" class="img-fluid rounded-start p-3"
                             alt="Kikori" />
                     </div>
                     <div class="col-md-8">
@@ -237,7 +237,7 @@
                             <p class="card-text">
                                 Incluye notas adheribles: 25 amarillas y banderillas de 5 colores. Regla de 14 cm impresa.Medida del producto 5.7 x 22 cm Material Cartón/Papel.
                             </p>
-                            <img src="/src/assets/img/oficina/libretas y post it/post-it-2.png" alt="Kikori" class="img-description">
+                            <img src="src/assets/img/oficina/libretas y post it/post-it-2.png" alt="Kikori" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
