--- a/src/pages/pachones.html
+++ b/src/pages/pachones.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/build/css/hdmecbs.css" />
+    <link rel="stylesheet" href="../../build/css/hdmecbs.css" />
     <title>Pachones</title>
 </head>
 
@@ -12,19 +12,19 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-white-500">
         <div class="container-fluid">
-            <a class="navbar-brand text-hd-orange-500" href="/index.html">
-                <img src="/src/assets/img/hero-carousel/logo-hd.png" alt="logo" />
+            <a class="navbar-brand text-hd-orange-500" href="../../index.html">
+                <img src="../../src/assets/img/hero-carousel/logo-hd.png" alt="logo" />
             </a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link active text-hd-orange-500" aria-current="page" href="#">Home</a>
+                      <a class="nav-link active text-hd-orange-500" aria-current="page" href="../../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-hd-orange-500" href="/src/pages/bebidas.html">Bebidas</a>
+                      <a class="nav-link text-hd-orange-500" href="../../src/pages/bebidas.html">Bebidas</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-hd-orange-500" href="/src/pages/oficina.html">Oficina</a>
+                      <a class="nav-link text-hd-orange-500" href="../../src/pages/oficina.html">Oficina</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link text-hd-orange-500" href="#">Tecnologia</a>
@@ -59,26 +59,26 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/src/assets/img/hero-carousel/HDHero.png" class="d-block w-100" alt="HD Logo"
+                <img src="../../src/assets/img/hero-carousel/HDHero.png" class="d-block w-100" alt="HD Logo"
                     title="HD MEC Logo" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/bocina.png" class="d-block w-100" alt="Bocina" title="bocina" />
+                <img src="../../src/assets/img/hero-carousel/bocina.png" class="d-block w-100" alt="Bocina" title="bocina" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/hielera.png" class="d-block w-100" alt="hielera"
+                <img src="../../src/assets/img/hero-carousel/hielera.png" class="d-block w-100" alt="hielera"
                     title="hielera" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/libreta.png" class="d-block w-100" alt="libreta"
+                <img src="../../src/assets/img/hero-carousel/libreta.png" class="d-block w-100" alt="libreta"
                     title="libreta" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/mochila.png" class="d-block w-100" alt="mochila"
+                <img src="../../src/assets/img/hero-carousel/mochila.png" class="d-block w-100" alt="mochila"
                     title="mochila" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/Taza.png" class="d-block w-100" alt="taza" title="taza" />
+                <img src="../../src/assets/img/hero-carousel/Taza.png" class="d-block w-100" alt="taza" title="taza" />
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="prev">
@@ -98,14 +98,14 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/bebidas/pachones/pachon-1.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/bebidas/pachones/pachon-1.png" class="img-fluid rounded-start p-3"
                             alt="bebidas" />
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title text-hd-orange-500">Chemin</h5>
                            <p class="card-text">Sistema de rosca twist-off que permite abrir y cerrar la tapa en un giro. Cuenta con dos bandas elasticas de silicon, una en el cuello y otra en la base del cilindro. Mantener el linner en el interior de la tapa en todo momento, se debe retirar hasta su uso final. No exponer el cilindro a temperaturas mayores a 40 Â°C y revisar que la tapa no este cerrada completamente para su almacenamiento y transportacion. No apto para bebidas calientes. No introducir en microondas ni lavavajillas. Capacidad 850ml Material Plástico Pet y Silicone.</p>
-                            <img src="/src/assets/img/bebidas/pachones/chemin.jpg" class="img-description">
+                            <img src="../../src/assets/img/bebidas/pachones/chemin.jpg" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -118,7 +118,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/bebidas/pachones/pachon-2.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/bebidas/pachones/pachon-2.png" class="img-fluid rounded-start p-3"
                             alt="bebidas" />
                     </div>
                     <div class="col-md-8">
@@ -127,7 +127,7 @@
                             <p class="card-text">
                                 Botella de aluminio cuerpo sólido para sublimar con tapa de plástico rígido y asa de silicón. Capacidad 650 ml  Material Aluminio y silicone.
                             </p>
-                            <img src="/src/assets/img/bebidas/pachones/pachon-2.png" class="img-description">
+                            <img src="../../src/assets/img/bebidas/pachones/pachon-2.png" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -140,7 +140,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/bebidas/pachones/pachon-3.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/bebidas/pachones/pachon-3.png" class="img-fluid rounded-start p-3"
                             alt="bebidas" />
                     </div>
                     <div class="col-md-8">
@@ -149,7 +149,7 @@
                             <p class="card-text">
                                 Cilindro de plastico con tapa de bambu. No exponer el cilindro a temperaturas mayores a 40 Â°C y revisar que la tapa no este cerrada completamente para su almacenamiento y transportacion. Mantener en su empaque individual antes y despues de su transformacion. No apto para bebidas calientes. No introducir en microondas ni lavavajillas.Capacidad 600ml Material Plástico y Bambú.
                             </p>
-                            <img src="/src/assets/img/bebidas/pachones/lemn.jpg" class="img-description">
+                            <img src="../../src/assets/img/bebidas/pachones/lemn.jpg" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -162,7 +162,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/bebidas/pachones/pachon-4.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/bebidas/pachones/pachon-4.png" class="img-fluid rounded-start p-3"
                             alt="bebidas" />
                     </div>
                     <div class="col-md-8">
@@ -171,7 +171,7 @@
                             <p class="card-text">
                                 Sistema de rosca twist-off que permite abrir y cerrar la tapa en un giro. Mantener el linner en el interior de la tapa en todo momento, se debe retirar hasta su uso final. No exponer el cilindro a temperaturas mayores a 40 Â°C y revisar que la tapa no este cerrada completamente para su almacenamiento y transportacion. Mantener en su empaque individual antes y despues de su transformacion. No apto para bebidas calientes. No introducir en microondas ni lavavajillas. Capacidad 750 ml Material Plástico.
                             </p>
-                            <img src="/src/assets/img/bebidas/pachones/parvo.jpg" alt="parvo" class="img-description">
+                            <img src="../../src/assets/img/bebidas/pachones/parvo.jpg" alt="parvo" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -184,7 +184,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/bebidas/pachones/pachon-5.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/bebidas/pachones/pachon-5.png" class="img-fluid rounded-start p-3"
                             alt="bebidas" />
                     </div>
                     <div class="col-md-8">
@@ -193,7 +193,7 @@
                             <p class="card-text">
                                 Sistema de rosca twist-off que permite abrir y cerrar la tapa en un giro. Incluye valvula de seguridad. No exponer el cilindro a temperaturas mayores a 40 Â°C y revisar que la tapa no este cerrada completamente para su almacenamiento y transportacion. Mantener en su empaque individual antes y despues de su transformacion. No apto para bebidas calientes. No introducir en microondas ni lavavajillas Capacidad 575ml Material del producto Plástico pet.
                             </p>
-                            <img src="/src/assets/img/bebidas/pachones/sinker.jpg" alt="Sinker" class="img-description">
+                            <img src="../../src/assets/img/bebidas/pachones/sinker.jpg" alt="Sinker" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -206,7 +206,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/bebidas/pachones/pachon-6.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/bebidas/pachones/pachon-6.png" class="img-fluid rounded-start p-3"
                             alt="bebidas" />
                     </div>
                     <div class="col-md-8">
@@ -215,7 +215,7 @@
                             <p class="card-text">
                                 Sistema de rosca twist-off que permite abrir y cerrar la tapa en un giro. Mantener el linner en el interior de la tapa en todo momento, se debe retirar hasta su uso final. Revisar que la tapa no este cerrada completamente. No exponer el cilindro a temperaturas mayores a 40 Â°C durante su almacenamiento y transportacion. Mantener en su empaque individual antes y despues de su transformacion. No apto para bebidas calientes. No introducir en microondas ni lavavajillas. Capacidad 850 ml  Material Plástico pet.
                             </p>
-                            <img src="/src/assets/img/bebidas/pachones/spring.jpg" alt="Spring" class="img-description">
+                            <img src="../../src/assets/img/bebidas/pachones/spring.jpg" alt="Spring" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -228,7 +228,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/bebidas/pachones/pachon-7.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/bebidas/pachones/pachon-7.png" class="img-fluid rounded-start p-3"
                             alt="bebidas" />
                     </div>
                     <div class="col-md-8">
@@ -237,7 +237,7 @@
                             <p class="card-text">
                                 Sistema de rosca twist-off que permite abrir y cerrar la tapa en un giro. Mantener el linner en el interior de la tapa en todo momento, se debe retirar hasta su uso final. Revisar que la tapa no este cerrada completamente. No exponer el cilindro a temperaturas mayores a 40 Â°C durante su almacenamiento y transportacion. Mantener en su empaque individual antes y despues de su transformacion. No apto para bebidas calientes. No introducir en microondas ni lavavajillas.  Capacidad de 960 ml  Material Plástico pet.
                             </p>
-                            <img src="/src/assets/img/bebidas/pachones/tribec.jpg" alt="Tribec" class="img-description">
+                            <img src="../../src/assets/img/bebidas/pachones/tribec.jpg" alt="Tribec" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
