--- a/src/pages/tazas.html
+++ b/src/pages/tazas.html
@@ -12,19 +12,19 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-white-500">
         <div class="container-fluid">
-            <a class="navbar-brand text-hd-orange-500" href="/index.html">
-                <img src="/src/assets/img/hero-carousel/logo-hd.png" alt="logo" />
+            <a class="navbar-brand text-hd-orange-500" href="../../index.html">
+                <img src="../../src/assets/img/hero-carousel/logo-hd.png" alt="logo" />
             </a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link active text-hd-orange-500" aria-current="page" href="#">Home</a>
+                      <a class="nav-link active text-hd-orange-500" aria-current="page" href="../../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-hd-orange-500" href="/src/pages/bebidas.html">Bebidas</a>
+                      <a class="nav-link text-hd-orange-500" href="../../src/pages/bebidas.html">Bebidas</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-hd-orange-500" href="/src/pages/oficina.html">Oficina</a>
+                      <a class="nav-link text-hd-orange-500" href="../../src/pages/oficina.html">Oficina</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link text-hd-orange-500" href="#">Tecnologia</a>
@@ -59,26 +59,26 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/src/assets/img/hero-carousel/HDHero.png" class="d-block w-100" alt="HD Logo"
+                <img src="../../src/assets/img/hero-carousel/HDHero.png" class="d-block w-100" alt="HD Logo"
                     title="HD MEC Logo" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/bocina.png" class="d-block w-100" alt="Bocina" title="bocina" />
+                <img src="../../src/assets/img/hero-carousel/bocina.png" class="d-block w-100" alt="Bocina" title="bocina" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/hielera.png" class="d-block w-100" alt="hielera"
+                <img src="../../src/assets/img/hero-carousel/hielera.png" class="d-block w-100" alt="hielera"
                     title="hielera" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/libreta.png" class="d-block w-100" alt="libreta"
+                <img src="../../src/assets/img/hero-carousel/libreta.png" class="d-block w-100" alt="libreta"
                     title="libreta" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/mochila.png" class="d-block w-100" alt="mochila"
+                <img src="../../src/assets/img/hero-carousel/mochila.png" class="d-block w-100" alt="mochila"
                     title="mochila" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/Taza.png" class="d-block w-100" alt="taza" title="taza" />
+                <img src="../../src/assets/img/hero-carousel/Taza.png" class="d-block w-100" alt="taza" title="taza" />
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="prev">
@@ -98,14 +98,14 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/bebidas/tazas/taza-1.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/bebidas/tazas/taza-1.png" class="img-fluid rounded-start p-3"
                             alt="Atziri" />
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title text-hd-orange-500">Atziri</h5>
                            <p class="card-text">Taza de cerámica de 11 onzas  interior de color y exterior negro. Terminando mate Medida del producto 7 x 8.6 cm Material Cerámica</p>
-                            <img src="/src/assets/img/bebidas/tazas/atziri.jpg" class="img-description">
+                            <img src="../../src/assets/img/bebidas/tazas/atziri.jpg" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -119,7 +119,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/bebidas/tazas/taza-2.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/bebidas/tazas/taza-2.png" class="img-fluid rounded-start p-3"
                             alt="Guillen" />
                     </div>
                     <div class="col-md-8">
@@ -128,7 +128,7 @@
                             <p class="card-text">
                             Taza de ceramica con base de silicon. Exterior blanco e interior de color. Incluye caja individual. No usar en microondas ni lavavajillas.Medida del producto 8.5 x 15.2 cm Material Cerámica / Silicón.
                             </p>
-                            <img src="/src/assets/img/bebidas/tazas/gillen.jpg" class="img-description">
+                            <img src="../../src/assets/img/bebidas/tazas/gillen.jpg" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -141,7 +141,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/bebidas/tazas/taza-3.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/bebidas/tazas/taza-3.png" class="img-fluid rounded-start p-3"
                             alt="Moffy" />
                     </div>
                     <div class="col-md-8">
@@ -150,7 +150,7 @@
                             <p class="card-text">
                                 Taza de ceramica  de 11 onzas exterior blanco e interior de color. Incluye cuchara Medida del producto 8.3 x 10.3 cm Material Cerámica.
                             </p>
-                            <img src="/src/assets/img/bebidas/tazas/moffy.jpg" class="img-description">
+                            <img src="../../src/assets/img/bebidas/tazas/moffy.jpg" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -163,7 +163,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/bebidas/tazas/taza-4.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/bebidas/tazas/taza-4.png" class="img-fluid rounded-start p-3"
                             alt="Omega" />
                     </div>
                     <div class="col-md-8">
@@ -172,7 +172,7 @@
                             <p class="card-text">
                                 Pocillo de cerámica con acabado brillante con interior blanco. Medida del producto 8 x 9.5 cm Material Cerámica.
                             </p>
-                            <img src="/src/assets/img/bebidas/tazas/omega.png" alt="omega" class="img-description">
+                            <img src="../../src/assets/img/bebidas/tazas/omega.png" alt="omega" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -185,7 +185,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/bebidas/tazas/taza-5.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/bebidas/tazas/taza-5.png" class="img-fluid rounded-start p-3"
                             alt="Sinker" />
                     </div>
                     <div class="col-md-8">
@@ -194,7 +194,7 @@
                             <p class="card-text">
                                 Taza de cerámica con acabado mate, base de corcho antideslizante, tapa con sistema de apertura y cierre. Medida del producto  14 x 7 cm Material Cerámica / corcho.
                             </p>
-                            <img src="/src/assets/img/bebidas/tazas/sidama-cork.jpg" alt="sidama-cork" class="img-description">
+                            <img src="../../src/assets/img/bebidas/tazas/sidama-cork.jpg" alt="sidama-cork" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
