--- a/src/pages/tumblers.html
+++ b/src/pages/tumblers.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/build/css/hdmecbs.css" />
+    <link rel="stylesheet" href="../../build/css/hdmecbs.css" />
     <title>Tumblers</title>
 </head>
 
@@ -12,19 +12,19 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-white-500">
         <div class="container-fluid">
-            <a class="navbar-brand text-hd-orange-500" href="/index.html">
-                <img src="/src/assets/img/hero-carousel/logo-hd.png" alt="logo" />
+            <a class="navbar-brand text-hd-orange-500" href="../../index.html">
+                <img src="../../src/assets/img/hero-carousel/logo-hd.png" alt="logo" />
             </a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link active text-hd-orange-500" aria-current="page" href="#">Home</a>
+                      <a class="nav-link active text-hd-orange-500" aria-current="page" href="../../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-hd-orange-500" href="/src/pages/bebidas.html">Bebidas</a>
+                      <a class="nav-link text-hd-orange-500" href="../../src/pages/bebidas.html">Bebidas</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-hd-orange-500" href="/src/pages/oficina.html">Oficina</a>
+                      <a class="nav-link text-hd-orange-500" href="../../src/pages/oficina.html">Oficina</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link text-hd-orange-500" href="#">Tecnologia</a>
@@ -59,26 +59,26 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/src/assets/img/hero-carousel/HDHero.png" class="d-block w-100" alt="HD Logo"
+                <img src="../../src/assets/img/hero-carousel/HDHero.png" class="d-block w-100" alt="HD Logo"
                     title="HD MEC Logo" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/bocina.png" class="d-block w-100" alt="Bocina" title="bocina" />
+                <img src="../../src/assets/img/hero-carousel/bocina.png" class="d-block w-100" alt="Bocina" title="bocina" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/hielera.png" class="d-block w-100" alt="hielera"
+                <img src="../../src/assets/img/hero-carousel/hielera.png" class="d-block w-100" alt="hielera"
                     title="hielera" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/libreta.png" class="d-block w-100" alt="libreta"
+                <img src="../../src/assets/img/hero-carousel/libreta.png" class="d-block w-100" alt="libreta"
                     title="libreta" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/mochila.png" class="d-block w-100" alt="mochila"
+                <img src="../../src/assets/img/hero-carousel/mochila.png" class="d-block w-100" alt="mochila"
                     title="mochila" />
             </div>
             <div class="carousel-item">
-                <img src="/src/assets/img/hero-carousel/Taza.png" class="d-block w-100" alt="taza" title="taza" />
+                <img src="../../src/assets/img/hero-carousel/Taza.png" class="d-block w-100" alt="taza" title="taza" />
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="prev">
@@ -98,14 +98,14 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/bebidas/tumbler/tumbler-1.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/bebidas/tumbler/tumbler-1.png" class="img-fluid rounded-start p-3"
                             alt="Mahattan" />
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title text-hd-orange-500">Mahattan</h5>
                            <p class="card-text">Vaso tipo tumbler con válvula antiderrames y pared de acero inoxidable Capacidad 500ml Material Acero Inoxidable.</p>
-                            <img src="/src/assets/img/bebidas/tumbler/mahattan.png" class="img-description">
+                            <img src="../../src/assets/img/bebidas/tumbler/mahattan.png" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -118,7 +118,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/bebidas/tumbler/tumbler-2.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/bebidas/tumbler/tumbler-2.png" class="img-fluid rounded-start p-3"
                             alt="Laska" />
                     </div>
                     <div class="col-md-8">
@@ -127,7 +127,7 @@
                             <p class="card-text">
                                 Doble pared. Pared interna de plastico, pared externa de acero inoxidable. Tapa de plastico con valvula de seguridad. Incluye caja individual. Capacidad 350ml Material Acero inoxidable y Plástico.
                             </p>
-                            <img src="/src/assets/img/bebidas/tumbler/laska.jpg" class="img-description">
+                            <img src="../../src/assets/img/bebidas/tumbler/laska.jpg" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -140,7 +140,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/bebidas/tumbler/tumbler-3.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/bebidas/tumbler/tumbler-3.png" class="img-fluid rounded-start p-3"
                             alt="Jersey" />
                     </div>
                     <div class="col-md-8">
@@ -149,7 +149,7 @@
                             <p class="card-text">
                                 Tumbler con pared exterior de acero inoxidable y pared interior de plástico, tapa de plástico con sistema de apertura y cierre. Incluye pajilla. Capacidad 20 onzas Material Acero Inoxidable.
                             </p>
-                            <img src="/src/assets/img/bebidas/tumbler/jersey.jpg" class="img-description">
+                            <img src="../../src/assets/img/bebidas/tumbler/jersey.jpg" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -162,7 +162,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/bebidas/tumbler/tumbler-4.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/bebidas/tumbler/tumbler-4.png" class="img-fluid rounded-start p-3"
                             alt="Fulton" />
                     </div>
                     <div class="col-md-8">
@@ -171,7 +171,7 @@
                             <p class="card-text">
                                 Botella de acero inoxidable en colores sólidos de doble pared con tapa de rosca. Capacidad 500ml Material Acero Inoxidable.
                             </p>
-                            <img src="/src/assets/img/bebidas/tumbler/fulton.png" alt="Fulton" class="img-description">
+                            <img src="../../src/assets/img/bebidas/tumbler/fulton.png" alt="Fulton" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -184,7 +184,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/bebidas/tumbler/tumbler-5.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/bebidas/tumbler/tumbler-5.png" class="img-fluid rounded-start p-3"
                             alt="bebidas" />
                     </div>
                     <div class="col-md-8">
@@ -193,7 +193,7 @@
                             <p class="card-text">
                                 Tumbler con pared exterior de acero inoxidable y pared interior de plástico, tapa de acrílico con sistema de apertura y cierre. Capacidad 17 onzas Material Acero Inoxidable.
                             </p>
-                            <img src="/src/assets/img/bebidas/tumbler/brooklyn.jpg" alt="Brooklyn" class="img-description">
+                            <img src="../../src/assets/img/bebidas/tumbler/brooklyn.jpg" alt="Brooklyn" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -206,7 +206,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/bebidas/tumbler/tumbler-6.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/bebidas/tumbler/tumbler-6.png" class="img-fluid rounded-start p-3"
                             alt="Bevanda" />
                     </div>
                     <div class="col-md-8">
@@ -215,7 +215,7 @@
                             <p class="card-text">
                                 Cilindro metalico de una pared y tapa de plastico con cierre de rosca. Incluye caja individual. Capacidad 600ml Material Aluminio y PLástico.
                             </p>
-                            <img src="/src/assets/img/bebidas/tumbler/bevanda.jpg" alt="Bevanda" class="img-description">
+                            <img src="../../src/assets/img/bebidas/tumbler/bevanda.jpg" alt="Bevanda" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -228,7 +228,7 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="/src/assets/img/bebidas/tumbler/tumbler-7.png" class="img-fluid rounded-start p-3"
+                        <img src="../../src/assets/img/bebidas/tumbler/tumbler-7.png" class="img-fluid rounded-start p-3"
                             alt="bebidas" />
                     </div>
                     <div class="col-md-8">
@@ -237,7 +237,7 @@
                             <p class="card-text">
                                 Termo doble pared. Pared interna de acero inoxidable y externa de plastico. Tapa con sistema de rosca que garantiza un cierre hermetico. Sobretapa con sistema push que previene derrames. Su elegante detalle metalico, rompe con la monocromia y anade un toque de distincion. Capacidad de 12 Oz. Base de 7 cm de diametro. Incluye caja individual. Capacidad 350ml Material Acero Inoxidable y PLástico.
                             </p>
-                            <img src="/src/assets/img/bebidas/tumbler/batani.png" alt="Batani" class="img-description">
+                            <img src="../../src/assets/img/bebidas/tumbler/batani.png" alt="Batani" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
