bebidas, oficina, secciones completas

--- a/src/pages/libretas.html
+++ b/src/pages/libretas.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg bg-white-500">
         <div class="container-fluid">
             <a class="navbar-brand text-hd-orange-500" href="../../index.html">
-                <img src="src/assets/img/hero-carousel/logo-hd.png" alt="Logo" />
+                <img src="../../src/assets/img/hero-carousel/logo-hd.png" alt="Logo" />
             </a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
