--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 <a class="nav-link text-hd-orange-500" href="src/pages/oficina.html">Oficina</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-hd-orange-500" href="#">Tecnologia</a>
+                <a class="nav-link text-hd-orange-500" href="src/pages/tecnologia.html">Tecnologia</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-hd-orange-500" href="#">Textil</a>
+                <a class="nav-link text-hd-orange-500" href="src/pages/textiles.html">Textil</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-hd-orange-500" href="#">Varios</a>
@@ -127,7 +127,7 @@
         <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
           <img src="src/assets/img/imagenesCategorias/Tecnologia.png" class="img-fluid rounded-start p-3" alt="...">
           <div class="d-grid gap-2 d-md-block">
-            <button class="btn btn-hd-orange-500 text-hd-white-500" type="button">Tecnología</button>
+            <button class="btn btn-hd-orange-500 text-hd-white-500" type="button"><a href="src/pages/tecnologia.html" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Tecnología</a></button>
           </div>
         </div>
         <div class="col-md-8">
@@ -146,7 +146,7 @@
         <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
           <img src="src/assets/img/imagenesCategorias/textiles.png" class="img-fluid rounded-start p-3" alt="...">
           <div class="d-grid gap-2 d-md-block">
-            <button class="btn btn-hd-orange-500 text-hd-white-500" type="button">Textiles</button>
+            <button class="btn btn-hd-orange-500 text-hd-white-500" type="button"><a href="src/pages/textiles.html" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Textiles</a></button>
           </div>
         </div>
         <div class="col-md-8">
@@ -165,7 +165,7 @@
         <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
           <img src="src/assets/img/imagenesCategorias/varios.png" class="img-fluid rounded-start p-3" alt="...">
           <div class="d-grid gap-2 d-md-block">
-            <button class="btn btn-hd-orange-500 text-hd-white-500" type="button">Varios</button>
+            <button class="btn btn-hd-orange-500 text-hd-white-500" type="button"><a href="src/pages/varios.html" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Varios</a></button>
           </div>
         </div>
         <div class="col-md-8">
