--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a class="nav-link text-hd-orange-500" href="src/pages/textiles.html">Textil</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-hd-orange-500" href="#">Varios</a>
+                <a class="nav-link text-hd-orange-500" href="src/pages/varios.html">Varios</a>
               </li>
             </ul>
           </div>
