--- a/src/pages/oficina.html
+++ b/src/pages/oficina.html
@@ -27,13 +27,13 @@
                       <a class="nav-link text-hd-orange-500" href="../../src/pages/oficina.html">Oficina</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-hd-orange-500" href="#">Tecnologia</a>
+                      <a class="nav-link text-hd-orange-500" href="../../src/pages/tecnologia.html">Tecnologia</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-hd-orange-500" href="#">Textil</a>
+                      <a class="nav-link text-hd-orange-500" href="../../src/pages/textiles.html">Textil</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-hd-orange-500" href="#">Varios</a>
+                      <a class="nav-link text-hd-orange-500" href="../../src/pages/varios.html">Varios</a>
                     </li>
                   </ul>
             </div>
@@ -109,7 +109,7 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title text-hd-orange-500">Lapiceros</h5>
-                            <p class="card-text">Hidratación con identidad. Nuestros pachones son prácticos, duraderos y perfectos para acompañar a tu equipo dentro y fuera de la oficina. Ideales para promociones, eventos o como parte del kit corporativo. Personalízalos con tu marca y haz que cada sorbo cuente.</p>
+                            <p class="card-text">En HD MARKETING, ofrecemos una extensa selección de lapiceros promocionales diseñados para fortalecer la identidad de tu marca. Desde modelos clásicos hasta opciones innovadoras, nuestros lapiceros son ideales para regalos corporativos, eventos empresariales o campañas de marketing. Personaliza cada uno con tu logo y mensaje, y deja una impresión duradera en tus clientes y colaboradores. Descubre cómo nuestros lapiceros pueden ayudar a impulsar tu marca de manera profesional y efectiva. ¡Visítanos y elige la opción perfecta para tu empresa!</p>
                         </div>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                         <div class="card-body">
                             <h5 class="card-title text-hd-orange-500">Libretas y Post it</h5>
                             <p class="card-text">
-                                Clásicas, modernas o creativas: tenemos la taza ideal para cada ocasión. Son perfectas para el café de todos los días, regalos empresariales o estrategias promocionales. Lleva tu marca a los escritorios con un toque cálido y funcional.
+                                En HD MARKETING, te ofrecemos una selección exclusiva de libretas y post-its promocionales, ideales para reforzar la presencia de tu marca. Personaliza estos productos con tu logo o mensaje, y crea artículos útiles que acompañen a tus clientes y colaboradores a lo largo del día. Perfectos para reuniones, eventos o campañas, nuestras libretas y post-its se convierten en herramientas prácticas que dejan una impresión duradera. ¡Explora nuestras opciones y dale un toque único a tu imagen corporativa.
                             </p>
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
@@ -157,7 +157,7 @@
                         <div class="card-body">
                             <h5 class="card-title text-hd-orange-500">Escritorio</h5>
                             <p class="card-text">
-                                Clásicas, modernas o creativas: tenemos la taza ideal para cada ocasión. Son perfectas para el café de todos los días, regalos empresariales o estrategias promocionales. Lleva tu marca a los escritorios con un toque cálido y funcional.
+                                En HD MARKETING, ofrecemos una gran selección de artículos de escritorio que ayudarán a destacar tu marca de manera práctica y efectiva. Contamos con mouse pads, resaltadores, antistress, mini kits, portagafetes y mucho más, ideales para reforzar la presencia de tu empresa en el día a día. Personaliza cada producto con tu logo o mensaje y conviértelo en un regalo útil y memorable para tus clientes y colaboradores. ¡Explora nuestras opciones y elige los artículos que mejor se adapten a las necesidades de tu marca!
                             </p>
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
