--- a/src/pages/tecnologia.html
+++ b/src/pages/tecnologia.html
@@ -30,10 +30,10 @@
                       <a class="nav-link text-hd-orange-500" href="../../src/pages/tecnologia.html">Tecnologia</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-hd-orange-500" href="#">Textil</a>
+                      <a class="nav-link text-hd-orange-500" href="../../src/pages/textiles.html">Textil</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-hd-orange-500" href="#">Varios</a>
+                      <a class="nav-link text-hd-orange-500" href="../../src/pages/varios.html">Varios</a>
                     </li>
                   </ul>
             </div>
@@ -109,6 +109,7 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title text-hd-orange-500">Audifonos</h5>
+                            <p class="card-text">En HD MARKETING, te ofrecemos una excelente selección de audífonos promocionales diseñados para destacar tu marca de manera moderna y funcional. Nuestros audífonos de alta calidad se pueden personalizar con tu logo o mensaje, convirtiéndolos en el regalo perfecto para clientes, colaboradores o eventos. Ya sea para oficinas, conferencias o como parte de una campaña de marketing, los audífonos son una opción ideal para promocionar tu empresa mientras brindas una experiencia práctica y duradera. ¡Descubre nuestra variedad y lleva tu marca a nuevos sonidos!</p>
                             <p class="card-text"><small class="text-body-secondary">HD Marketing empresarial y corporativo</small></p>
                         </div>
                     </div>
@@ -131,6 +132,7 @@
                         <div class="card-body">
                             <h5 class="card-title text-hd-orange-500">Soporte para Celular</h5>
                             <p class="card-text">
+                                En HD MARKETING, tenemos los soportes para celulares promocionales ideales para mantener tu marca a la vista de manera práctica y funcional. Estos accesorios, perfectos para el escritorio o para uso personal, ofrecen una excelente forma de promocionar tu empresa mientras tus clientes y colaboradores mantienen sus dispositivos organizados. Personaliza cada soporte con tu logo o mensaje, y convierte este producto en una herramienta útil que llevará tu marca a donde más se necesita. ¡Explora nuestra gama de soportes para celulares y elige el que mejor se adapte a tu estrategia de marketing!
                             </p>
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
@@ -156,6 +158,9 @@
                         <div class="card-body">
                             <h5 class="card-title text-hd-orange-500">Electronicos</h5>
                             <p class="card-text">
+                                En HD Marketing, combinamos innovación y funcionalidad para ofrecer artículos electrónicos que llevan tu marca a otro nivel. Nuestra selección de productos está diseñada para acompañar a las personas en su día a día, creando una conexión auténtica y duradera con tu empresa.
+Cada detalle cuenta. Con tecnología útil y de calidad, hacemos que tu marca esté siempre presente, agregando valor en cada momento. HD Marketing: potencia tu marca con innovación.
+
                             </p>
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
