--- a/src/pages/textiles.html
+++ b/src/pages/textiles.html
@@ -33,7 +33,7 @@
                       <a class="nav-link text-hd-orange-500" href="../../src/pages/textiles.html">Textil</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-hd-orange-500" href="#">Varios</a>
+                      <a class="nav-link text-hd-orange-500" href="../../src/pages/varios.html">Varios</a>
                     </li>
                   </ul>
             </div>
@@ -109,6 +109,9 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title text-hd-orange-500">Loncheras</h5>
+                            <p class="card-text">En HD Marketing, ofrecemos artículos promocionales diseñados para generar impacto y fortalecer la presencia de tu marca. Nuestras loncheras combinan practicidad y estilo, manteniendo los alimentos frescos y organizados, ideales para el trabajo, la escuela o cualquier actividad diaria.
+                                Más que un obsequio, una oportunidad para destacar.
+                            </p>
                             <p class="card-text"><small class="text-body-secondary">HD Marketing empresarial y corporativo</small></p>
                         </div>
                     </div>
@@ -131,6 +134,9 @@
                         <div class="card-body">
                             <h5 class="card-title text-hd-orange-500">Mochilas</h5>
                             <p class="card-text">
+                                En HD Marketing, ofrecemos artículos promocionales diseñados para fortalecer la presencia de tu marca. Nuestras mochilas combinan estilo y funcionalidad, brindando comodidad, resistencia y espacio ideal para el día a día. Perfectas para el trabajo, la escuela o los viajes, garantizan visibilidad constante de tu empresa en cada uso.
+Lleva tu marca a todas partes con cada detalle.
+
                             </p>
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
@@ -156,6 +162,10 @@
                         <div class="card-body">
                             <h5 class="card-title text-hd-orange-500">Playeras y Gorras</h5>
                             <p class="card-text">
+                                En HD Marketing, ofrecemos playeras y gorras personalizadas que reflejan tu marca con estilo y comodidad. Con productos de alta calidad y diseño atractivo, estas opciones promocionales no solo son prácticas, sino también una excelente manera de generar visibilidad y hacer que tu empresa se destaque en cualquier evento, actividad o entorno.
+Las playeras son perfectas para todo tipo de actividades, brindando comodidad y durabilidad, mientras que las gorras ofrecen protección y estilo, asegurando que tu marca esté siempre presente.
+Haz que tu marca se vea en cada paso, en cada lugar.
+
                             </p>
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
@@ -181,6 +191,9 @@
                         <div class="card-body">
                             <h5 class="card-title text-hd-orange-500">Sporty</h5>
                             <p class="card-text">
+                                En HD Marketing, ofrecemos sporty bags personalizadas que combinan estilo y funcionalidad. Estas bolsas deportivas son ideales para quienes buscan comodidad y practicidad en su día a día, ya sea para ir al gimnasio, hacer deporte o simplemente para actividades cotidianas.
+Con materiales resistentes y un diseño moderno, nuestras sporty bags no solo son perfectas para tus clientes, sino que también sirven como una excelente herramienta de promoción, asegurando que tu marca esté presente en cada actividad.
+Una forma práctica de llevar tu marca a todas partes.
                             </p>
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
@@ -206,6 +219,9 @@
                         <div class="card-body">
                             <h5 class="card-title text-hd-orange-500">Bolsas</h5>
                             <p class="card-text">
+                                En HD Marketing, ofrecemos una variedad de bolsas promocionales personalizadas que se ajustan a las necesidades de tu marca. Desde bolsas ecológicas que reflejan un compromiso con el medio ambiente, hasta opciones laminadas, simples y de PVC, ideales para llevar tus productos o promocionar tu logo en cualquier evento.
+Nuestras bolsas ofrecen practicidad, resistencia y una excelente visibilidad para tu marca, asegurando que cada vez que se usen, tu empresa esté presente.
+Soluciones promocionales funcionales que acompañan a tus clientes en su día a día.
                             </p>
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
