--- a/src/pages/hogar.html
+++ b/src/pages/hogar.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../build/css/hdmecbs.css" />
-    <title>Bebidas</title>
+    <title>Hogar</title>
 </head>
 
 <body>
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg bg-white-500">
         <div class="container-fluid">
             <a class="navbar-brand text-hd-orange-500" href="../../index.html">
-                <img src="../../src/assets/img/hero-carousel/logo-hd.png" alt="logo" />
+                <img src="../../src/assets/img/hero-carousel/logo-hd.png" alt="Logo" />
             </a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -66,19 +66,19 @@
                 <img src="../../src/assets/img/hero-carousel/bocina.png" class="d-block w-100" alt="Bocina" title="bocina" />
             </div>
             <div class="carousel-item">
-                <img src="../../src/assets/img/hero-carousel/hielera.png" class="d-block w-100" alt="hielera"
+                <img src="../../src/assets/img/hero-carousel/hielera.png" class="d-block w-100" alt="Hielera"
                     title="hielera" />
             </div>
             <div class="carousel-item">
-                <img src="../../src/assets/img/hero-carousel/libreta.png" class="d-block w-100" alt="libreta"
+                <img src="../../src/assets/img/hero-carousel/libreta.png" class="d-block w-100" alt="Libreta"
                     title="libreta" />
             </div>
             <div class="carousel-item">
-                <img src="../../src/assets/img/hero-carousel/mochila.png" class="d-block w-100" alt="mochila"
+                <img src="../../src/assets/img/hero-carousel/mochila.png" class="d-block w-100" alt="Mochila"
                     title="mochila" />
             </div>
             <div class="carousel-item">
-                <img src="../../src/assets/img/hero-carousel/Taza.png" class="d-block w-100" alt="taza" title="taza" />
+                <img src="../../src/assets/img/hero-carousel/Taza.png" class="d-block w-100" alt="Taza" title="taza" />
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="prev">
@@ -95,44 +95,17 @@
 
     <div class="row row-cols-1 row-cols-md-3 mt-3 mx-auto">
         <div class="col">
-            <div class="card mb-3 border-hd-orange-600" style="max-width: 640px">
+            <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="../../src/assets/img/bebidas/pachones/pachon-1.png" class="img-fluid rounded-start p-3"
-                            alt="bebidas" />
-                        <div class="d-grid gap-2 d-md-block m-2">
-                            <button class="btn btn-hd-orange-500 text-hd-white-500" type="button">
-                              <a href="../../src/pages/pachones.html" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Pachones</a>
-                            </button>
-                        </div>
+                        <img src="../../src/assets/img/varios/hogar/posa-vasos.png" class="img-fluid rounded-start p-3"
+                            alt="Posa Vasos" />
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h5 class="card-title text-hd-orange-500">Pachones</h5>
-                            <p class="card-text">Hidratación con identidad. Nuestros pachones son prácticos, duraderos y perfectos para acompañar a tu equipo dentro y fuera de la oficina. Ideales para promociones, eventos o como parte del kit corporativo. Personalízalos con tu marca y haz que cada sorbo cuente.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card mb-3 border-hd-orange-600" style="max-width: 640px">
-                <div class="row g-0">
-                    <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="../../src/assets/img/bebidas/tazas/taza-3.png" class="img-fluid rounded-start p-3"
-                            alt="bebidas" />
-                        <div class="d-grid gap-2 d-md-block m-2">
-                            <button class="btn btn-hd-orange-500 text-hd-white-500" type="button">
-                                <a href="../../src/pages/tazas.html" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Tazas</a>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title text-hd-orange-500">Tazas</h5>
-                            <p class="card-text">
-                                Clásicas, modernas o creativas: tenemos la taza ideal para cada ocasión. Son perfectas para el café de todos los días, regalos empresariales o estrategias promocionales. Lleva tu marca a los escritorios con un toque cálido y funcional.
-                            </p>
+                            <h5 class="card-title text-hd-orange-500">Posa Vasos</h5>
+                           <p class="card-text">Set de cuatro posavasos de corcho. Suministrado en caja de regalo. Medida del producto 8 x 8 cm Material Corcho.</p>
+                            <img src="../../src/assets/img/varios/hogar/posa-vasos.png" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
@@ -142,23 +115,77 @@
             </div>
         </div>
         <div class="col">
-            <div class="card mb-3 border-hd-orange-600" style="max-width: 640px">
+            <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="../../src/assets/img/bebidas/tumbler/tumbler-1.png" class="img-fluid rounded-start p-3"
-                            alt="bebidas" />
-                        <div class="d-grid gap-2 d-md-block m-2">
-                            <button class="btn btn-hd-orange-500 text-hd-white-500" type="button">
-                                <a href="../../src/pages/tumblers.html" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Tumblers</a> 
-                            </button>
-                        </div>
+                        <img src="../../src/assets/img/varios/hogar/destapador-2.png" class="img-fluid rounded-start p-3"
+                            alt="Destapador Meyer" />
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h5 class="card-title text-hd-orange-500">Tumblers</h5>
+                            <h5 class="card-title text-hd-orange-500">Destapador Meyer</h5>
+                           <p class="card-text">Destapador de metal con recubrimiento de silicon blanco Medida del producto 18cm de largo x 4cm de ancho.</p>
+                            <img src="../../src/assets/img/varios/hogar/destapador-2.png" class="img-description">
                             <p class="card-text">
-                                Diseño, funcionalidad y estilo en un solo producto. Nuestros tumblers son ideales para bebidas calientes o frías, manteniendo la temperatura por más tiempo. Una excelente opción para regalos corporativos o promociones que dejan huella.
+                                <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
+                <div class="row g-0">
+                    <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
+                        <img src="../../src/assets/img/varios/hogar/destapador-1.png" class="img-fluid rounded-start p-3"
+                            alt="Destapador Holz" />
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title text-hd-orange-500">Destapador Holz</h5>
+                           <p class="card-text">Destapador metálico con mango de madera. Medida del producto 15 x 3 cm.</p>
+                            <img src="../../src/assets/img/varios/hogar/destapador-1.png" class="img-description">
+                            <p class="card-text">
+                                <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
+                <div class="row g-0">
+                    <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
+                        <img src="../../src/assets/img/varios/hogar/set-lunch.png" class="img-fluid rounded-start p-3"
+                            alt="Set Lunch" />
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title text-hd-orange-500">Set Lunch</h5>
+                           <p class="card-text">Set de ﬁbra de trigo. Incluye cuchara, cuchillo y tenedor Medida del producto 20.3 x 5.7 x 2.1 cm.</p>
+                            <img src="../../src/assets/img/varios/hogar/set-lunch.png" class="img-description">
+                            <p class="card-text">
+                                <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card mb-3 border-hd-orange-600" style="max-width: 640px; min-height: 600px;">
+                <div class="row g-0">
+                    <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
+                        <img src="../../src/assets/img/varios/hogar/omaha.png" class="img-fluid rounded-start p-3"
+                            alt="Recipiente Omaha" />
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title text-hd-orange-500">Recipiente Omaha</h5>
+                           <p class="card-text">Hermetico cuadrado retractil de silicon con tapadera plástica Medida del producto  8 x 13 cm.</p>
+                            <img src="../../src/assets/img/varios/hogar/omaha.png" class="img-description">
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
                             </p>
