--- a/src/pages/varios.html
+++ b/src/pages/varios.html
@@ -18,24 +18,25 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link active text-hd-orange-500" aria-current="page" href="../../index.html">Home</a>
+                        <a class="nav-link active text-hd-orange-500" aria-current="page"
+                            href="../../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-hd-orange-500" href="../../src/pages/bebidas.html">Bebidas</a>
+                        <a class="nav-link text-hd-orange-500" href="../../src/pages/bebidas.html">Bebidas</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-hd-orange-500" href="../../src/pages/oficina.html">Oficina</a>
+                        <a class="nav-link text-hd-orange-500" href="../../src/pages/oficina.html">Oficina</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-hd-orange-500" href="../../src/pages/tecnologia.html">Tecnologia</a>
+                        <a class="nav-link text-hd-orange-500" href="../../src/pages/tecnologia.html">Tecnologia</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-hd-orange-500" href="../../src/pages/textiles.html">Textil</a>
+                        <a class="nav-link text-hd-orange-500" href="../../src/pages/textiles.html">Textil</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-hd-orange-500" href="../../src/pages/varios.html">Varios</a>
+                        <a class="nav-link text-hd-orange-500" href="../../src/pages/varios.html">Varios</a>
                     </li>
-                  </ul>
+                </ul>
             </div>
         </div>
     </nav>
@@ -63,7 +64,8 @@
                     title="HD MEC Logo" />
             </div>
             <div class="carousel-item">
-                <img src="../../src/assets/img/hero-carousel/bocina.png" class="d-block w-100" alt="Bocina" title="bocina" />
+                <img src="../../src/assets/img/hero-carousel/bocina.png" class="d-block w-100" alt="Bocina"
+                    title="bocina" />
             </div>
             <div class="carousel-item">
                 <img src="../../src/assets/img/hero-carousel/hielera.png" class="d-block w-100" alt="Hielera"
@@ -98,18 +100,29 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="../../src/assets/img/varios/sombrillas/sombrilla-1.png" class="img-fluid rounded-start p-3"
-                            alt="Sombrillas" />
+                        <img src="../../src/assets/img/varios/sombrillas/sombrilla-1.png"
+                            class="img-fluid rounded-start p-3" alt="Sombrillas" />
                         <div class="d-grid gap-2 d-md-block m-2">
                             <button class="btn btn-hd-orange-500 text-hd-white-500" type="button">
-                              <a href="../../src/pages/sombrillas.html" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Sombrillas</a>
+                                <a href="../../src/pages/sombrillas.html"
+                                    class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Sombrillas</a>
                             </button>
                         </div>
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title text-hd-orange-500">Sombrillas</h5>
-                            <p class="card-text"><small class="text-body-secondary">HD Marketing empresarial y corporativo</small></p>
+                            <p class="card-text">
+                                En HD Marketing, ofrecemos sombrillas promocionales personalizadas que protegen tanto
+                                del sol como de la lluvia. Disponibles en diversos estilos y colores, nuestras
+                                sombrillas son ideales para eventos al aire libre, ferias y campañas promocionales,
+                                garantizando que tu marca se mantenga visible en cualquier clima.
+                                Con calidad, durabilidad y un diseño atractivo, nuestras sombrillas brindan comodidad y
+                                protección a tus clientes durante todo el año.
+                                Protege a tus clientes y resalta tu marca en cualquier estación.
+                            </p>
+                            <p class="card-text"><small class="text-body-secondary">HD Marketing empresarial y
+                                    corporativo</small></p>
                         </div>
                     </div>
                 </div>
@@ -123,7 +136,8 @@
                             alt="Hielera" />
                         <div class="d-grid gap-2 d-md-block m-2">
                             <button class="btn btn-hd-orange-500 text-hd-white-500" type="button">
-                                <a href="../../src/pages/hielera.html" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Hielera</a>
+                                <a href="../../src/pages/hielera.html"
+                                    class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Hielera</a>
                             </button>
                         </div>
                     </div>
@@ -131,6 +145,11 @@
                         <div class="card-body">
                             <h5 class="card-title text-hd-orange-500">Hielera</h5>
                             <p class="card-text">
+                                En HD Marketing, ofrecemos hieleras promocionales personalizadas, diseñadas para
+                                mantener las bebidas frías durante todo el día. Ideales para actividades al aire libre,
+                                eventos corporativos o días de campo, nuestras hieleras combinan practicidad y
+                                durabilidad, brindando una excelente oportunidad para promover tu marca en cada evento.
+                                Refresca el día de tus clientes y potencia tu marca en cada ocasión.
                             </p>
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
@@ -144,11 +163,12 @@
             <div class="card mb-3 border-hd-orange-600" style="max-width: 640px">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="../../src/assets/img/varios/llaveros/llavero-5.png" class="img-fluid rounded-start p-3"
-                            alt="Llaveros" />
+                        <img src="../../src/assets/img/varios/llaveros/llavero-5.png"
+                            class="img-fluid rounded-start p-3" alt="Llaveros" />
                         <div class="d-grid gap-2 d-md-block m-2">
                             <button class="btn btn-hd-orange-500 text-hd-white-500" type="button">
-                                <a href="../../src/pages/llaveros.html" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Llaveros</a>
+                                <a href="../../src/pages/llaveros.html"
+                                    class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Llaveros</a>
                             </button>
                         </div>
                     </div>
@@ -156,6 +176,14 @@
                         <div class="card-body">
                             <h5 class="card-title text-hd-orange-500">Llaveros</h5>
                             <p class="card-text">
+                                En HD Marketing, ofrecemos llaveros promocionales personalizados que son una forma
+                                práctica y efectiva de mantener tu marca siempre a la mano. Disponibles en diversos
+                                materiales y diseños, nuestros llaveros son ideales para campañas promocionales, eventos
+                                y obsequios corporativos, asegurando que tu logo esté presente en el día a día de tus
+                                clientes.
+                                Con alta visibilidad y durabilidad, nuestros llaveros se convierten en un recordatorio
+                                constante de tu marca, siendo útiles y atractivos al mismo tiempo.
+                                Haz que tu marca esté siempre al alcance de tus clientes, en cada llave.
                             </p>
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
@@ -173,7 +201,8 @@
                             alt="Mujer" />
                         <div class="d-grid gap-2 d-md-block m-2">
                             <button class="btn btn-hd-orange-500 text-hd-white-500" type="button">
-                                <a href="../../src/pages/mujer.html" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Mujer</a>
+                                <a href="../../src/pages/mujer.html"
+                                    class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Mujer</a>
                             </button>
                         </div>
                     </div>
@@ -181,6 +210,13 @@
                         <div class="card-body">
                             <h5 class="card-title text-hd-orange-500">Mujer</h5>
                             <p class="card-text">
+                                En HD Marketing, ofrecemos una selección de artículos promocionales para mujer
+                                personalizados que combinan estilo, funcionalidad y calidad. Desde accesorios de moda
+                                hasta artículos prácticos para el día a día, nuestros productos están diseñados para ser
+                                útiles y representar tu marca de una manera elegante.
+                                Ideal para campañas dirigidas a un público femenino, nuestros artículos promocionales no
+                                solo refuerzan tu marca, sino que también son un reflejo de la sofisticación y el gusto.
+                                Conquista el mercado femenino con productos que hablan de tu marca y estilo.
                             </p>
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
@@ -198,7 +234,8 @@
                             alt="Hogar" />
                         <div class="d-grid gap-2 d-md-block m-2">
                             <button class="btn btn-hd-orange-500 text-hd-white-500" type="button">
-                                <a href="../../src/pages/bolsas.html" class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Hogar</a>
+                                <a href="../../src/pages/hogar.html"
+                                    class="link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Hogar</a>
                             </button>
                         </div>
                     </div>
@@ -206,6 +243,13 @@
                         <div class="card-body">
                             <h5 class="card-title text-hd-orange-500">Hogar</h5>
                             <p class="card-text">
+                                En HD Marketing, ofrecemos artículos promocionales para el hogar personalizados que
+                                combinan practicidad y estilo. Desde utensilios de cocina hasta accesorios de
+                                decoración, nuestros productos están diseñados para ser útiles en el día a día, mientras
+                                mantienen la visibilidad de tu marca en cada rincón del hogar.
+                                Ideales para campañas de fidelización o eventos especiales, nuestros artículos para el
+                                hogar refuerzan tu marca de manera duradera y funcional.
+                                Haz que tu marca se convierta en parte del hogar de tus clientes.
                             </p>
                             <p class="card-text">
                                 <small class="text-body-secondary">HD Marketing empresarial y corporativo</small>
