update links, pages and menu

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
           <a class="navbar-brand text-hd-orange-500" href="index.html">
             <img src="src/assets/img/hero-carousel/logo-hd.png" alt="Logo">
           </a>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active text-hd-orange-500" aria-current="page" href="#">Home</a>
