--- a/src/pages/electronicos.html
+++ b/src/pages/electronicos.html
@@ -38,6 +38,9 @@
                     <li class="nav-item">
                       <a class="nav-link text-hd-orange-500" href="../../src/pages/varios.html">Varios</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-hd-orange-500" href="../../src/pages/contacto.html">Contacto</a>
+                    </li>
                   </ul>
             </div>
         </div>
